// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CacheBadge > snapshot test - cached state 1`] = `
<span
  class="ml-2 px-2 py-1 text-xs font-medium rounded-full bg-blue-100 text-blue-800"
>
  Cached
</span>
`;

exports[`CacheBadge > snapshot test - live state 1`] = `
<span
  class="ml-2 px-2 py-1 text-xs font-medium rounded-full bg-gray-100 text-gray-800"
>
  Live
</span>
`;
